--- a/PC/appsettings.json
+++ b/PC/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=MyDatabase.db"
+  }
+
 }
+
