--- a/PC/appsettings.json
+++ b/PC/appsettings.json
@@ -7,7 +7,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Filename=MyDatabase.db"
+    "DefaultConnection": "Filename=MyDatabase.db",
+    "ScoreDb": "Filename=Scores.db"
   }
 
 }
